2018-01-02 {
	* changed exception style to std::exception
	* fixed bug #0003
}

2018-01-01 {
	+ added max tracing depth
	* output format tweak
	+ added switcher in each module
}

2017-12-20 to 2017-12-31 missing

2017-12-19 {
	+ added changelog
	* updated onto github
	* fixed #0001, #0002
	+ added default task option
	+ changed option parser to boost::program_options
}